// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions and reducer Ended action sets ended to true 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": true,
  "error": false,
  "loading": false,
  "playing": true,
}
`;

exports[`actions and reducer Loaded action sets loading to false 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "loading": false,
  "playing": false,
}
`;

exports[`actions and reducer Loading action sets loading to true 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "loading": true,
  "playing": false,
}
`;

exports[`actions and reducer Pause action sets playing to false 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "loading": false,
  "playing": false,
}
`;

exports[`actions and reducer Play action sets playing to true 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "loading": false,
  "playing": true,
}
`;

exports[`actions and reducer Playing audio after previous has ended resets ended state 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "loading": false,
  "playing": true,
}
`;

exports[`actions and reducer Requesting new audio play resets ended state 1`] = `
Object {
  "currentTime": 0,
  "duration": 0,
  "ended": false,
  "error": false,
  "loading": false,
  "playing": false,
}
`;

exports[`actions and reducer Update current time action updates currentTime 1`] = `
Object {
  "currentTime": 10,
  "duration": 0,
  "ended": false,
  "error": false,
  "loading": false,
  "playing": false,
}
`;

exports[`actions and reducer Update duration action updates duration 1`] = `
Object {
  "currentTime": 0,
  "duration": 60,
  "ended": false,
  "error": false,
  "loading": false,
  "playing": false,
}
`;
